netbootxyz/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbootxyz
  name: netbootxyz-web
  namespace: netbootxyz  
spec:
  selector:
    app: netbootxyz
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: assets
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbootxyz
  name: netbootxyz-tftp
  namespace: netbootxyz  
spec:
  selector:
    app: netbootxyz
  type: LoadBalancer
  loadBalancerIP: 192.168.10.220
  ports:
    - name: tftp
      port: 69
      protocol: UDP
      targetPort: 69
