netbootxyz/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbootxyz
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`netboot.mandariini.uk`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: netbootxyz
          namespace: netbootxyz
          port: 3000
    - kind: Rule
      match: "Host(`netboot.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
    - kind: Rule
      match: Host(`assets.mandariini.uk`)
      services:
        - name: netbootxyz
          namespace: netbootxyz
          port: 80
  tls:
    secretName: mandariini-uk-tls
